Photowrapper now gets GPS data via non static call